sql/field.h
@@ -432,6 +432,7 @@ public:
 
   int store_decimal(const my_decimal *);
   my_decimal *val_decimal(my_decimal *);
+  uint32 max_display_length() { return field_length; }
 };
 
 
@@ -461,7 +462,6 @@ public:
   void overflow(bool negative);
   bool zero_pack() const { return 0; }
   void sql_type(String &str) const;
-  uint32 max_display_length() { return field_length; }
 };
 
 
@@ -719,7 +719,6 @@ public:
   void sort_string(char *buff,uint length);
   uint32 pack_length() const { return sizeof(float); }
   void sql_type(String &str) const;
-  uint32 max_display_length() { return 24; }
 };
 
 
@@ -762,7 +761,6 @@ public:
   void sort_string(char *buff,uint length);
   uint32 pack_length() const { return sizeof(double); }
   void sql_type(String &str) const;
-  uint32 max_display_length() { return 53; }
   uint size_of() const { return sizeof(*this); }
 };
 
